--- a/overlay/packages/apps/ROMControl/res/values/arrays.xml
+++ b/overlay/packages/apps/ROMControl/res/values/arrays.xml
@@ -2,7 +2,8 @@
 <resources>
 
 	<string-array name="available_toggles_entries">
-		<item>ROTATE</item>
+		<item>DATA</item>
+        <item>ROTATE</item>
 		<item>BT</item>
 		<item>GPS</item>
 		<item>WIFI</item>
@@ -11,9 +12,11 @@
 		<item>SYNC</item>
 		<item>TETHER</item>
 		<item>SWAGGER</item>
+		<item>2G</item>
        	</string-array>
 	
 	<string-array name="available_toggles_values">
+		<item>@string/toggle_data</item>
 		<item>@string/toggle_auto_rotate</item>
 		<item>@string/toggle_bluetooth</item>
 		<item>@string/toggle_gps</item>
@@ -22,7 +25,8 @@
 		<item>@string/toggle_silent</item>
 		<item>@string/toggle_sync</item>
 		<item>@string/toggle_usb_tether</item>
-                <item>@string/toggle_swagger</item>
+        <item>@string/toggle_swagger</item>
+		<item>@string/toggle_2g</item>
         </string-array>
 
 </resources>
