--- a/overlay/packages/apps/ROMControl/res/values/config.xml
+++ b/overlay/packages/apps/ROMControl/res/values/config.xml
@@ -7,11 +7,11 @@
     <bool name="has_torch">false</bool>
 
     <!-- Whether device has hardware buttons -->
-    <bool name="has_hardware_buttons">false</bool>
+    <bool name="has_hardware_buttons">true</bool>
 
-    <!-- Whether can use fast chage -->
+    <!-- Whether can use fast charge -->
     <bool name="has_fast_charge">false</bool>
 
     <!-- Whether can use color tuning -->
-    <bool name="has_color_tuning">false</bool>
+    <bool name="has_color_tuning">true</bool>
 </resources>
